<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="102dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:orientation="vertical">

            !-- Progress bar overlay; shown while progress -->
            <include layout="@layout/include_loading"/>

            <EditText
                android:id="@+id/OldPasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/OldPasswordHint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/NewPasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/NewPasswordHint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/ConfirmNewPasswordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/ConfirmNewPasswordHint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/SaveChangesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color0"
                android:text="Save Changes"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/CancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color0"
                android:text="@string/CancelTxt"
                android:textColor="@color/White" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>