<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/EditSwipeLayout"
        style="@style/SwipeRefreshingLayout"
        tools:context=".EditProfileActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Progress bar overlay; shown while progress -->
                <include layout="@layout/include_loading"/>

                <ImageView
                    android:id="@+id/UserProfilePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    tools:layout_editor_absoluteX="107dp"
                    tools:layout_editor_absoluteY="89dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <EditText
                    android:id="@+id/UserNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="0dp"
                    android:ems="10"
                    android:hint="@string/UsernameHint"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/BirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:hint="@string/BirthDateHint" />

                <Button
                    android:id="@+id/choosePhotoBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/color0"
                    android:text="@string/ChooseNewPhotoTxt"
                    android:textColor="@color/White" />

                <Button
                    android:id="@+id/ChangePasswordBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/color0"
                    android:text="@string/ChangePasswordBtnTxt"
                    android:textColor="@color/White" />

                <Button
                    android:id="@+id/SaveChangesBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/color0"
                    android:text="@string/SaveChangesBtnTxt"
                    android:textColor="@color/White" />


            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>