<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    !-- Progress bar overlay; shown while progress -->
    <include layout="@layout/include_loading"/>

    <EditText
        android:id="@+id/otpTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/otpHint"
        android:singleLine="true"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="390dp" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/NewPasswordHint"
        android:inputType="textPassword"
        android:singleLine="true"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="390dp" />

    <EditText
        android:id="@+id/confPasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/ConfirmNewPasswordHint"
        android:inputType="textPassword"
        android:singleLine="true"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/submitChangedPassword"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color0"
        android:text="@string/SaveChangedPassword"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="464dp" />

    <Button
        android:id="@+id/cancelChangePassword"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color0"
        android:text="@string/CancelTxt"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="464dp" />
</LinearLayout>